# libstreamhlp

./: CMakeLists.txt  LICENSE  README.md
src/: streamhlp.c  streamhlp.h
